# IfcOpenShell

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  .template.ifc.swp  .travis.yml  COPYING  COPYING.LESSER  Dockerfile  IFcopenshell_c++Tutorial.md  README  README.md  XmlSerializer(20210109).cpp  XmlSerializer(20210111).cpp  XmlSerializer(20210114).cpp  export.py  generate.sh  meta_docs.txt  nix.Dockerfile  output.ifc  pyproject.toml  run_V6.sh  run_V7.sh  template.ifc  untitled.blend  untitled.blend1
cmake/: CMakeLists.txt  cmake_uninstall.cmake.in  utilities.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.out  conf.py  conf_to_copy.py  generate_docs.py  index.rst  index_to_copy.rst
docs/cpp-api/: Doxyfile  README.md
docs/geom/: settings.md
docs/geom/images/: OpeningElement BooleanResult.jfif
src/bcf/: CITATION.cff  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/bcf/bcf/: bcfxml.py  data.py  geometry.py  inmemory_zipfile.py  xml_parser.py
src/bcf/tests/: __init__.py  conftest.py
src/blenderbim/: CITATION.cff  Makefile  RenameObjects.py  blenderbim_icons.blend  demo-library.blend  dxf2ifc.py  extract.py  gbxml.py  generate_demo_library.py  generate_site_library.py  generate_util_type_json.py  getIfcElements.py  get_description.py  get_volume_by_material.py  icon-cad.blend  icon.blend  obj2ifc.py  p6_to_ifc.py  pyproject.toml  pytest.ini  runpytest.py  setup_pytest.py
src/blenderbim/blenderbim/: __init__.py  addon_updater.py  addon_updater_ops.py  blender_manifest.toml  translations.py
src/blenderbim/desktop/: Makefile  README.md  blenderbim.desktop  blenderbim.sh  blenderbim.xml
src/blenderbim/docs/: blenderbim.rst  conf.py  ifccobie.rst  ifcconvert.rst  ifcmax.rst  ifcopenshell.rst  index.rst
src/blenderbim/libraries/: blenderbim-demo-library.ifc  blenderbim-site-library.ifc
src/blenderbim/scripts/: bbim_setup_translations.py  bbim_translations.py  blenderbim_redirect.py  dxf2ifc.py  gbxml.py  generate_au_library.py  generate_demo_library.py  generate_entourage_library.py  generate_furniture_library.py  generate_landscape_library.py  generate_site_library.py  generate_steel_profiles_library.py  generate_util_type_json.py  geonodes_modifier_prototype.py  getIfcElements.py  get_all_qtos.py  get_description.py  get_volume_by_material.py  headless_import.py  ifc2sql.py  obj2ifc-meshlab.py  obj2ifc.py  replace_drawing_path.py  setup_pytest.py  setup_translations.py  shape_builder_examples.py  standalone_blender_import.py  standalone_section_shader.py  tree_species.csv
src/blenderbim/test/: test_segment_clipping.py
src/blenderbim/tests/: test_segment_clipping.py
src/bonsai/: CITATION.cff  Makefile  README.md  blenderbim_icons.blend  pyproject.toml  pytest.ini  runpytest.py
src/bonsai/bonsai/: __init__.py  blender_manifest.toml
src/bonsai/docs/: conf.py  index.rst
src/bonsai/scripts/: au-library.blend  bonsai_translations.py  dxf2ifc.py  entourage-library.blend  extract.py  gbxml.py  generate_au_library.py  generate_demo_library.py  generate_entourage_library.py  generate_furniture_library.py  generate_landscape_library.py  generate_png_icons.py  generate_site_library.py  generate_steel_profiles_library.py  generate_util_type_json.py  geonodes_modifier_prototype.py  getIfcElements.py  get_description.py  get_volume_by_material.py  get_wheels.py  headless_import.py  landscape-library.blend  obj2ifc-meshlab.py  obj2ifc.py  replace_drawing_path.py  setup_pytest.py  site-library.blend  standalone_blender_import.py
src/bsdd/: CITATION.cff  Makefile  README.md  __about__.py  __init__.py  bsdd.py  bsdd_json.py  pyproject.toml  yml_to_classes.py
src/bsdd/bsdd/: api.py
src/bsdd/tests/: test_bsdd.py
src/examples/: CMakeLists.txt  IfcAdvancedHouse.cpp  IfcAlignment.cpp  IfcOpenHouse.cpp  IfcParseExamples.cpp  IfcSimplifiedAlignment.cpp  arbitrary_open_profile_def.cpp  composite_profile_def.cpp  csg_primitive.cpp  ellipse_pies.cpp  faces.cpp  ifc_curve_rebar.cpp  profiles.cpp  suzanne_geometry.h  triangulated_faceset.cpp
src/ifc4d/: CITATION.cff  Makefile  README.md  __main__.py  pyproject.toml
src/ifc4d/ifc4d/: __init__.py  __main__.py  common.py  construction_schedule.csv  csv2ifc.py  csv4d2ifc.py  ifc2msp.py  ifc2p6.py  msp2ifc.py  p62ifc.py  (+6 more)
src/ifc5d/: CITATION.cff  Makefile  README.md  pyproject.toml  rates.csv  sample_cost_schedule_house_FR.csv  sample_cost_schedule_house_FR.ods  test.csv
src/ifcbimtester/: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  __init__.py  bimtester.py  clean.py  cli.py  gui.py  guibimtester.py  guiwidget.py  pyproject.toml  reports.py  run.py  startbimtester.py
src/ifccityjson/: .gitignore  CITATION.cff  Makefile  README.md  __init__.py  __main__.py  cityjson2ifc.py  geometry.py  ifccityjson.py  pyproject.toml
src/ifcclash/: CITATION.cff  Makefile  README.md  bootstrap.py  clashsets.json  collision.py  ifcclash.py  make.py  pyproject.toml
src/ifccsv/: CITATION.cff  Makefile  ifccsv.py  pyproject.toml
src/ifcdiff/: CITATION.cff  Makefile  diff.py  ifcdiff.py  pyproject.toml  test.py
src/ifcfm/: CITATION.cff  Makefile  README.md  ifcfm.py  pyproject.toml
src/ifcmax/: CITATION.cff  CMakeLists.txt  IfcMax.cpp  IfcMax.def  IfcMax.h  MaxMaterials.h
src/ifcopenshell-python/: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  setup.py
src/ifcpatch/: CITATION.cff  Duplex_A_20110505.ifc  Makefile  README.md  __init__.py  bootstrap.py  ifcpatch.py  make.py  optimized_file.ifc  pyproject.toml
src/ifctester/: CITATION.cff  Makefile  README.md  pyproject.toml
src/ifcwrap/: CITATION.cff  CMakeLists.txt  IfcGeomWrapper.i  IfcImport.py  IfcParseWrapper.i  IfcPython.i  IfcPython_wrap.cxx  Interface.h  ifc.py  ifcopenshell.py
src/qtviewer/: CITATION.cff  CMakeLists.txt  IfcViewerWidget.cpp  IfcViewerWidget.h  MainWindow.cpp  MainWindow.h  MessageLogger.h  MouseHandler.cpp  MouseHandler.h  ParseIfcFile.cpp  ParseIfcFile.h  main.cpp  mainwindow.cpp  mainwindow.h
(+4342 files in other folders)
